--- a/Blog/blog.css
+++ b/Blog/blog.css
@@ -1,30 +1,127 @@
-body{
-    background-image: url('bookheader2.jpg');
-min-height: 100%;
-min-width: 100%;
-width: 100%;
-height: auto;
-position: fixed;
-top: 0;
-left: 0;
-background-repeat: repeat-x;
-background-position: center;
+#top-bar{
+background-color: white;
+  position: fixed;
+  top: 0;
+  min-height: 77px;
+  width: 100%;
+  padding: 0px 23px;
+  display: flex;
+  align-items: center;
+  font-family: 'Roboto Mono' , monospace;
+  z-index: 2;
+  @media (max-width: 568px) {
+      flex-wrap: wrap;
+  }
 }
 
-.icon_div{
- list-style: none;
- margin: 40px 250px; //firstupanddown //secondboxbigger
- display: inline-block;
- padding: 40px 40px;
- border: 1px solid #fff;
- border border-radius: 50%;
- padding-left: 1em;
- padding-right: 1em;
-
-
-}
-
-h2{
+#top-img{
+    padding: 11px;
+    width:100px;
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     text-align: center;
-    line-height: initial;
+    margin-left: 27px;
+    @media (max-width: 568px) {
+      position: relative;
+    }
+  }
+#nav-bar{
+    display: inline-block;
+    padding-left: 1000px;
+    float: right;
+    position: absolute;
+    border: black;
+}
+.dropbtn {
+    color:black;
+    padding: 5px;
+    font-size: 16px;
+    border-radius: 5px;
+    font-family: 'Roboto Mono' , monospace;
+}
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+.dropdown-content a:hover {background-color: #ddd;}
+
+.dropdown:hover .dropdown-content {display: block;}
+
+.dropdown:hover .dropbtn {background-color: grey;}
+
+#work{
+    color:black;
+    padding: 5px;
+    font-size: 16px;
+    border-radius: 5px;
+    font-family: 'Roboto Mono' , monospace;
+}
+#educ{
+    color:black;
+    padding: 5px;
+    font-size: 16px;
+    border-radius: 5px;
+    font-family: 'Roboto Mono' , monospace;
+}
+
+    
+body{
+    text-align: center;
+    font-family: 'Roboto Mono' , monospace ;
+}
+.gallery-highlight{
+    width: 81%;
+    height: 550px;
+}
+section{
+    display: flex;
+    height: 100vh;
+}
+.room-gallery{
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.room-description{
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: lightblue;
+    padding-top: 250px;
+}
+.room-preview{
+    display: flex;
+    width: 80%;
+    border: 2px solid;
+}
+.room-preview img{
+    height: 100px;
+    flex-grow: 1;
+    opacity: 0.6;
+    cursor: pointer;
+    transition: opacity 0.3s ease;
+}
+img.room-active{
+    opacity: 1;
+
 }
