--- a/Blog/blog.css
+++ b/Blog/blog.css
@@ -1,5 +1,5 @@
 #top-bar{
-background-color: white;
+background-color: A1C3D1;
   position: fixed;
   top: 0;
   min-height: 77px;
@@ -8,6 +8,7 @@ background-color: white;
   display: flex;
   align-items: center;
   font-family: 'Roboto Mono' , monospace;
+  color: 
   z-index: 2;
   @media (max-width: 568px) {
       flex-wrap: wrap;
@@ -86,43 +87,116 @@ body{
     text-align: center;
     font-family: 'Roboto Mono' , monospace ;
 }
-.gallery-highlight{
-    width: 81%;
-    height: 550px;
+*,
+*::after,
+*::before {
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit; 
 }
-section{
-    display: flex;
-    height: 100vh;
-}
-.room-gallery{
-    width: 50%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-.room-description{
-    width: 50%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-color: lightblue;
-    padding-top: 250px;
-}
-.room-preview{
-    display: flex;
-    width: 80%;
-    border: 2px solid;
-}
-.room-preview img{
-    height: 100px;
-    flex-grow: 1;
-    opacity: 0.6;
-    cursor: pointer;
-    transition: opacity 0.3s ease;
-}
-img.room-active{
-    opacity: 1;
 
+html {
+  box-sizing: border-box;
+  font-size: 62.5%; 
+}
+
+body {
+  font-family: "Nunito", sans-serif;
+  color: #333;
+  font-weight: 300;
+  line-height: 1.6; 
+  padding-top: 200px;
+}
+
+.container {
+  width: 60%;
+  margin: 2rem auto; 
+}
+
+.gallery {
+  display: grid;
+  grid-template-columns: repeat(8, 1fr);
+  grid-template-rows: repeat(8, 5vw);
+  grid-gap: 1.5rem; 
+  border-radius: 5px;
+}
+
+.gallery__img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block; 
+}
+
+.gallery__item--1 {
+  grid-column-start: 1;
+  grid-column-end: 3;
+  grid-row-start: 1;
+  grid-row-end: 3;
+
+  /** Alternative Syntax **/
+  /* grid-column: 1 / span 2;  */
+  /* grid-row: 1 / span 2; */
+}
+
+.gallery__item--2 {
+  grid-column-start: 3;
+  grid-column-end: 5;
+  grid-row-start: 1;
+  grid-row-end: 3;
+
+  /** Alternative Syntax **/
+  /* grid-column: 3 / span 2;  */
+  /* grid-row: 1 / span 2; */
+}
+
+.gallery__item--3 {
+  grid-column-start: 5;
+  grid-column-end: 9;
+  grid-row-start: 1;
+  grid-row-end: 6;
+
+  /** Alternative Syntax **/
+  /* grid-column: 5 / span 4;
+  grid-row: 1 / span 5; */
+}
+
+.gallery__item--4 {
+  grid-column-start: 1;
+  grid-column-end: 5;
+  grid-row-start: 3;
+  grid-row-end: 6;
+
+  /** Alternative Syntax **/
+  /* grid-column: 1 / span 4;  */
+  /* grid-row: 3 / span 3; */
+}
+
+.gallery__item--5 {
+  grid-column-start: 1;
+  grid-column-end: 5;
+  grid-row-start: 6;
+  grid-row-end: 9;
+
+  /** Alternative Syntax **/
+  /* grid-column: 1 / span 4; */
+  /* grid-row: 6 / span 3; */
+}
+
+.gallery__item--6 {
+  grid-column-start: 5;
+  grid-column-end: 9;
+  grid-row-start: 6;
+  grid-row-end: 9;
+
+  /** Alternative Syntax **/
+  /* grid-column: 5 / span 4; */
+  /* grid-row: 6 / span 3; */
+}
+#animations{
+    height: 100px;
+    width: 100px;
+}
+#reggie{
+    background-image:linear-gradient(to bottom right, #B39BC8 ,#F0EBF4) ;
 }
