--- a/blog.css
+++ b/blog.css
@@ -27,7 +27,7 @@ header{
     padding: 20px 0
 }
 .navbar{
-    background-color: 181818 ;
+    background-color: #181818 ;
 }
 header h1,
 header a, 
@@ -36,7 +36,7 @@ header a,
 .skills h1, 
 .work h1, 
 .contact h1{
-    color: #707070;
+    color: lightgrey;
 }
 li{
     list-style: none;
@@ -68,7 +68,8 @@ a{
     display: inline-block;
 }
 span:hover{
-    color: #48CFAD
+    color: #48CFAD;
+    transition: all .5s;
 }
 
 span.name{
@@ -116,6 +117,9 @@ span.m-left{
 .profile-img img{
     width: 450px;
     margin-top: 50px;
+    border-radius: 30px;
+    -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+  filter: grayscale(100%);
 
 }
 .about{
@@ -125,5 +129,247 @@ span.m-left{
 .about h1,
 .work h1{
     font-size: 10rem;
-    ;
+    z-index: 0;
+    opacity: .1;
+    
 }
+.about-me-info{
+    max-width: 900px;
+    background-color: #252627;
+    box-shadow: 0 0 1.2rem rgba(0,0,0,.25);
+    padding: 50px;
+    position: relative;
+    top: -70px;
+    left: 50%;
+    right: 50%;
+    transform: translateX(-50%);
+    z-index: 1;
+
+}
+.about-me-info p{
+    font-size: 1.3rem;
+    color: #bebebe;
+}
+.about-me-info p:nth-child(2),
+.about-me-info p:last-child{
+    margin-top: 30px;
+}
+.about img{
+    width: 300px;
+    position: relative;
+    top:-300px;
+    left: calc(100% - 100px);
+    right: calc(100% - 100px);
+    transform: translateX(calc(-100% + 100px));
+}
+.skills{
+    height: 100vh;
+}
+.skills h1, 
+.contact h1{
+    text-align: right;
+    font-size: 10rem;
+    opacity: .1;
+}
+.skills-info{
+    font-size: 1.4rem;
+    color: #bebebe;
+    max-width:800px;
+    position: relative;
+    left: 50%;
+    right: 50%;
+    transform: translateX(-50%);
+    text-align: center;
+    margin-bottom: 50px;
+}
+.html{
+    display:flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-bottom: 40px;
+}
+div[class^='tag-']{
+    clip-path: polygon(75% 0%, 100% 50%, 75% 100%, 0% 100%, 0% 50%, 0% 0%);
+    width: 120px;
+    height: 30px;
+    background-color: #1785a7;
+    margin-right: 30px;
+}
+div[class^='tag-'] p{
+    color: #ffffff;
+    text-align: left;
+    padding-left: 10px;
+    font-size: 1.1rem;
+    padding-top: 3px;
+} 
+.progressbar{
+    position: relative;
+    width: 600px;
+    height: 20px;
+    border: 2px solid blue;
+    height: 10px;
+    border-radius: 20px;
+    margin-top: 7px;
+}
+div[class^='bar-']{
+position: absolute;
+background-color: #ED5565;
+height: 10px;
+border-radius: 20px;
+margin: -1px;
+}
+.bar-html, 
+.bar-css
+{
+    width: 400px;
+}
+.bar-javascript{
+    width: 200px;
+}
+
+.contact{
+    margin-top: 50px;
+}
+form input, 
+form textarea{
+    display: block;
+    width: 500px;
+    padding: 20px;
+    background-color: #252627;
+    border: 3px solid #707070;
+    margin: 20px 0;
+    outline: none;
+    font-size: 1.2rem;
+    color: #ffffff;
+    position: relative;
+    left: 50%;
+    right: 50%;
+    transform: translateX(-50%);
+
+}
+form input:last-child{
+    width: 150px;
+    background-color:#ED5565 ;
+    border: none; 
+    cursor: pointer;
+    
+}
+footer hr{
+border: 2px solid #707070;
+margin-top: 80px;
+}
+footer p{
+    text-align: center;
+    color: #707070;
+    font-size: 1.2rem;
+    padding: 30px 0;
+}
+#img-profile{
+-webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+  filter: grayscale(100%);
+  border-radius: 50%;
+}
+* {
+    box-sizing: border-box;
+  }
+  
+  body {
+    font-family: Arial, Helvetica, sans-serif;
+  }
+  
+  /* Float four columns side by side */
+  .column {
+    float: left;
+    width: 33%;
+    padding: 0 10px;
+  }
+  
+  /* Remove extra left and right margins, due to padding in columns */
+  .row {margin: 0 -5px;}
+  
+  /* Clear floats after the columns */
+  .row:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+  
+  /* Style the counter cards */
+  .card {
+    box-shadow: 0 4px 8px 0 rgba(190, 41, 41, 0.2); /* this adds the "card" effect */
+    padding: 16px;
+    text-align: center;
+    background-color: #bebebe;
+    height: 500px;
+    border-radius: 5px;
+  }
+  .row:hover{
+    color: blue;
+    transition: all .5s;
+
+  }
+  
+  /* Responsive columns - one column layout (vertical) on small screens */
+  @media screen and (max-width: 600px) {
+    .column {
+      width: 100%;
+      display: block;
+      margin-bottom: 20px;
+    }
+  }
+  .popup {
+    position: relative;
+    display: inline-block;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+  }
+  
+  /* The actual popup */
+  .popup .popuptext {
+    visibility: hidden;
+    width: 300px;
+    height: 380px;
+    background-color: #555;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    padding: 8px 0;
+    position: absolute;
+    z-index: 1;
+    bottom: 125%;
+    left: 50%;
+    margin-left: -150px;
+  }
+  
+  /* Popup arrow */
+  .popup .popuptext::after {
+    content: "";
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    margin-left: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: #555 transparent transparent transparent;
+  }
+  
+  /* Toggle this class - hide and show the popup */
+  .popup .show {
+    visibility: visible;
+    -webkit-animation: fadeIn 1s;
+    animation: fadeIn 1s;
+  }
+  
+  /* Add animation (fade in the popup) */
+  @-webkit-keyframes fadeIn {
+    from {opacity: 0;} 
+    to {opacity: 1;}
+  }
+  
+  @keyframes fadeIn {
+    from {opacity: 0;}
+    to {opacity:1 ;}
+  }
