--- a/blog.css
+++ b/blog.css
@@ -18,7 +18,7 @@ nav ul,
     justify-content: space-between;
 }
 body{
-    background-color: #252627;
+    background-color: #060606;
 }
 header{
     display: flex;
@@ -114,7 +114,8 @@ span.m-left{
 .text a:hover::before{
     height: 100px;
 }
-.profile-img img{
+.profile-img{
+    background-color: blue;
     width: 450px;
     margin-top: 50px;
     border-radius: 30px;
@@ -373,3 +374,32 @@ footer p{
     from {opacity: 0;}
     to {opacity:1 ;}
   }
+  .card_html{
+      color: red;
+  }
+  .line-1{
+    position: relative;
+    top: 50%;  
+    width: 24em;
+    margin: 0 auto;
+    border-right: 2px solid rgba(255,255,255,.75);
+    font-size: 180%;
+    text-align: center;
+    white-space: nowrap;
+    overflow: hidden;
+    transform: translateY(-50%);    
+}
+
+/* Animation */
+.anim-typewriter{
+  animation: typewriter 4s steps(44) 1s 1 normal both,
+             blinkTextCursor 500ms steps(44) infinite normal;
+             animation-iteration-count: infinite;
+}
+@keyframes typewriter{
+  from{width: 0;}
+  to{width: 24em;}
+}
+@keyframes blinkTextCursor{
+  from{border-right-color: rgba(255,255,255,.75);}
+  to{border-right-color: transparent;}
